--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   modal_progress_hud_nsn: ^0.4.0
   image_picker: ^1.0.4
   fluttertoast: ^8.2.2
+  flutter_spinkit: ^5.2.0
 
 dev_dependencies:
   flutter_test:
